k8s/homelab-auth/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hlab-auth-forwardauth
  namespace: hlab-auth
spec:
  forwardAuth:
    address: http://hlab-auth.hlab-auth.svc.cluster.local:8000/api/v1/forward-auth
    trustForwardHeader: false
    authResponseHeaders:
      - X-Hlab-User-Id
      - X-Hlab-Username
      - X-Hlab-Display-Name
      - X-Hlab-Email
      - X-Hlab-Groups
      - X-Hlab-Roles
      - X-Hlab-Scopes
