k8s/homelab-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hlab-auth
  namespace: hlab-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: traefik
  rules:
    - host: auth.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hlab-auth
                port:
                  number: 8000
    - host: auth.waylonwalker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hlab-auth
                port:
                  number: 8000
  tls:
      - hosts:
          - auth.wayl.one
        secretName: auth-wayl-one-tls
      - hosts:
          - auth.waylonwalker.com
        secretName: auth-waylonwalker-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hlab-auth-redirect-https
  namespace: hlab-auth
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hlab-auth-http-redirect
  namespace: hlab-auth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: hlab-auth-hlab-auth-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
    - host: auth.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hlab-auth
                port:
                  number: 8000
    - host: auth.waylonwalker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hlab-auth
                port:
                  number: 8000
